add contest ML and init wisdom_func

--- a/coursera_statistic_python/coursera_math_and_python_week4.ipynb
+++ b/coursera_statistic_python/coursera_math_and_python_week4.ipynb
@@ -31,7 +31,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "* Выберите ваше любимое непрерывное распределение (чем меньше оно будет похоже на нормальное, тем интереснее; попробуйте выбрать какое-нибудь распределение из тех, что мы не обсуждали в курсе).\n",
     "\n",
@@ -70,10 +74,95 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "* Сгенерируйте из него выборку объёма 1000, постройте гистограмму выборки и нарисуйте поверх неё теоретическую плотность распределения вашей случайной величины."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sample_rayleigh = rayleigh_rv.rvs(size=size)\n",
+    "\n",
+    "x = np.linspace(0,12,100)\n",
+    "\n",
+    "pdf = rayleigh_rv.pdf(x)\n",
+    "plt.hist(sample_rayleigh, density=True, label='sample histogram')\n",
+    "\n",
+    "plt.plot(x, pdf, label='theoretical pdf')\n",
+    "plt.legend()\n",
+    "plt.ylabel('$f(x)$')\n",
+    "plt.xlabel('$x$')\n",
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* Для нескольких значений _n_ (например, 5, 10, 50) сгенерируйте 1000 (*size*) выборок объёма n и постройте гистограммы распределений их выборочных средних. Используя информацию о среднем и дисперсии исходного распределения (её можно без труда найти в википедии), посчитайте значения параметров нормальных распределений, которыми, согласно центральной предельной теореме, приближается распределение выборочных средних. Обратите внимание: для подсчёта значений этих параметров нужно использовать именно теоретические среднее и дисперсию вашей случайной величины, а не их выборочные оценки. Поверх каждой гистограммы нарисуйте плотность соответствующего нормального распределения."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for n in [5, 10, 50, 100]:\n",
+    "    sample_means = []\n",
+    "    for rvn in range(size):\n",
+    "        means = rayleigh_rv.rvs(size=n).mean()\n",
+    "        sample_means.append(means)\n",
+    "\n",
+    "    plt.hist(sample_means, density=True, label='sample means histogram')\n",
+    "\n",
+    "    # вычислим pdf нормального распределения\n",
+    "    norm_rv = sts.norm((math.pi / 2) ** .5 * scale, ((2 - math.pi / 2) / n * scale ** 2) ** .5)\n",
+    "    x = np.linspace(0, 12, 100)\n",
+    "    pdf = norm_rv.pdf(x)\n",
+    "\n",
+    "    plt.plot(x, pdf, label='norm theoretical pdf')\n",
+    "    plt.legend()\n",
+    "    plt.title(\"Sample size %d\" % n)\n",
+    "    plt.ylabel('fraction of samples $f(x)$')\n",
+    "    plt.xlabel('sample mean $x$')\n",
+    "    plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Выводы\n",
+    "\n",
+    "Как видно из построенных графиков, при увеличении размера выборки (_n_), распределение средних значений начинает\n",
+    "сходиться к mean (~6.267), среднеквадратичное отклонение убывает.\n",
+    "\n",
+    "Таким образом, при увеличении *n* точность\n",
+    "аппроксимации растёт, что соответсвует одному из утверждений Центральной предельной теоремы."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -96,18 +185,13 @@
     }
    ],
    "source": [
-    "sample_rayleigh = rayleigh_rv.rvs(size=size)\n",
+    "# Выводы\n",
     "\n",
-    "x = np.linspace(0,12,100)\n",
+    "Как видно из построенных графиков, при увеличении размера выборки (_n_), распределение средних значений начинает\n",
+    "сходиться к mean (~6.267), среднеквадратичное отклонение убывает.\n",
     "\n",
-    "pdf = rayleigh_rv.pdf(x)\n",
-    "plt.hist(sample_rayleigh, density=True, label='sample histogram')\n",
-    "\n",
-    "plt.plot(x, pdf, label='theoretical pdf')\n",
-    "plt.legend()\n",
-    "plt.ylabel('$f(x)$')\n",
-    "plt.xlabel('$x$')\n",
-    "plt.show()\n"
+    "Таким образом, при увеличении *n* точность\n",
+    "аппроксимации растёт, что соответсвует одному из утверждений Центральной предельной теоремы."
    ]
   },
   {
