fix and add description data

--- a/stepik_math_stat/contestML_week_1/ML_contest_week_1.ipynb
+++ b/stepik_math_stat/contestML_week_1/ML_contest_week_1.ipynb
@@ -31,6 +31,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "[event_data_train](https://stepik.org/media/attachments/course/4852/event_data_train.zip) - данные о действиях, которые совершают студенты со стэпами.\n",
+    "\n",
+    "Описание данных:\n",
+    "1. **step_id** - id стэпа\n",
+    "2. **user_id** - анонимизированный id юзера\n",
+    "3. **timestamp** - время наступления события в формате unix date\n",
+    "4. **action** - событие, возможные значения:\n",
+    "    - _discovered_ - пользователь перешел на стэп\n",
+    "    - _viewed_ - просмотр шага\n",
+    "    - _started_attempt_ - начало попытки решить шаг, ранее нужно было явно нажать на кнопку - начать решение, перед тем как приступить к решению практического шага\n",
+    "    - _passed_ - удачное решение практического шага\n",
+    "\n",
+    "\n",
+    "[submissions_train](https://stepik.org/media/attachments/course/4852/submissions_data_train.zip) - данные о времени и статусах сабмитов к практическим заданиям.\n",
+    "\n",
+    "Описание данных:\n",
+    "1. **step_id** - id стэпа\n",
+    "2. **timestamp** - время отправки решения в формате unix date\n",
+    "3. **submission_status** - статус решения\n",
+    "4. **user_id** - анонимизированный id юзера"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 292,
    "metadata": {},
