--- a/research_ML/predicting_student_churn.ipynb
+++ b/research_ML/predicting_student_churn.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,18 +270,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19234, 7)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape (17310, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False    15578\n",
+       "True      1732\n",
+       "Name: is_gone, dtype: int64"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# разделение данных для обучения на train и test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, stratify=y)\n",
@@ -325,14 +365,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, estimator=RandomForestClassifier(), n_jobs=-1,\n",
+       "             param_grid={'max_depth': range(1, 13, 2),\n",
+       "                         'min_samples_leaf': range(1, 11),\n",
+       "                         'min_samples_split': range(2, 13, 2),\n",
+       "                         'n_estimators': range(10, 80, 10)})"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 7,\n",
+       " 'min_samples_leaf': 3,\n",
+       " 'min_samples_split': 2,\n",
+       " 'n_estimators': 50}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roc на test 0.882856103252502\n"
+     ]
+    }
+   ],
    "source": [
     "#METHOD 2\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "clf_rf = RandomForestClassifier()z\n",
+    "clf_rf = RandomForestClassifier()\n",
     "parametrs = {'n_estimators': range(10, 80, 10), 'max_depth': range(1, 13, 2), \n",
     "             'min_samples_leaf': range(1, 11), 'min_samples_split': range(2, 13, 2)}\n",
     "\n",
@@ -567,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -576,10 +651,11 @@
        "GridSearchCV(cv=10,\n",
        "             estimator=LogisticRegression(class_weight='balanced',\n",
        "                                          fit_intercept=False),\n",
-       "             param_grid={'C': [0.01, 0.05, 0.1, 0.5, 1, 5, 10]})"
+       "             param_grid={'C': [0.01, 0.05, 0.1, 0.5, 1, 5, 10]},\n",
+       "             scoring='roc_auc')"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,24 +681,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8800444452463434\n"
+      "0.8732663948229407\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 1.33441512, -0.1690829 , -0.5361754 ,  0.87260755, -0.18702058,\n",
-       "        -0.07809031,  0.18057301]])"
+       "array([[ 1.29793553, -0.17274631, -1.42971773,  1.88171544, -0.29187658,\n",
+       "        -0.04292966,  0.1615277 ]])"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,16 +723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def xgb_classifier(X_train, X_test, y_train, y_test, useTrainCV=True, cv_folds=5, early_stopping_rounds=50):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
-    "#     alg = XGBClassifier(learning_rate=0.1, n_estimators=175, max_depth=8,\n",
-    "#                         min_child_weight=2, gamma=0.2, subsample=0.6, colsample_bytree=1.0,\n",
-    "#                         objective='binary:logistic', nthread=4, scale_pos_weight=1, seed=27)\n",
+    "    alg = XGBClassifier(learning_rate=0.1, n_estimators=150, max_depth=8,\n",
+    "                        min_child_weight=2, gamma=0.2, subsample=0.6, colsample_bytree=1.0,\n",
+    "                        objective='binary:logistic', nthread=4, scale_pos_weight=1, seed=27)\n",
     "\n",
     "    if useTrainCV:\n",
     "        print(\"Start Feeding Data\")\n",
@@ -667,19 +743,64 @@
     "                          early_stopping_rounds=early_stopping_rounds)\n",
     "        alg.set_params(n_estimators=cvresult.shape[0])\n",
     "\n",
-    "#     print('Start Training')\n",
-    "#     alg.fit(X_train, y_train, eval_metric='auc')\n",
+    "    print('Start Training')\n",
+    "    alg.fit(X_train, y_train, eval_metric='auc')\n",
     "\n",
-    "    param_test1 = {'n_estimators': range(10, 80, 10), 'max_depth': range(1, 13, 2), 'min_child_weight':range(1, 11)}\n",
-    "    gsearch1 = GridSearchCV(estimator=XGBClassifier(),\n",
-    "                                                    param_grid=param_test1,\n",
-    "                                                    n_jobs=4, iid=False, cv=3)\n",
-    "    gsearch1.fit(X_train, y_train)\n",
-    "    print(gsearch1.cv_results_, gsearch1.best_params_, gsearch1.best_score_)\n",
-    "    return gsearch1\n",
-    "#     print(\"Start Predicting\")\n",
-    "#     predictions = alg.predict(X_test)\n",
-    "#     return alg.predict_proba(X_test)[:, 1]"
+    "#     param_test1 = {'n_estimators': range(10, 80, 10), 'max_depth': range(1, 13, 2), 'min_child_weight':range(1, 11)}\n",
+    "#     gsearch1 = GridSearchCV(estimator=XGBClassifier(),\n",
+    "#                                                     param_grid=param_test1,\n",
+    "#                                                     n_jobs=4, iid=False, cv=3)\n",
+    "#     gsearch1.fit(X_train, y_train)\n",
+    "#     print(gsearch1.cv_results_, gsearch1.best_params_, gsearch1.best_score_)\n",
+    "#     return gsearch1\n",
+    "    print(\"Start Predicting\")\n",
+    "    predictions = alg.predict(X_test)\n",
+    "    return alg.predict_proba(X_test)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start Feeding Data\n",
+      "Start Training\n",
+      "Start Predicting\n"
+     ]
+    }
+   ],
+   "source": [
+    "alg = xgb_classifier(X_train, X_test, y_train, y_test, useTrainCV=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roc на test 0.887601339973056\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pred_proba = alg.predict_proba(X_test)\n",
+    "roc_score = roc_auc_score(y_test, alg)\n",
+    "print('roc на test', roc_score)\n",
+    "\n",
+    "# best_clf = alg.best_estimator_\n",
+    "# best_clf\n",
+    "\n",
+    "# pred_proba = best_clf.predict_proba(X_test)\n",
+    "# roc_score = roc_auc_score(y_test, pred_proba[:, 1])\n",
+    "# print('roc на test', roc_score)"
    ]
   },
   {
@@ -687,60 +808,117 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "alg = xgb_classifier(X_train, X_test, y_train, y_test, useTrainCV=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
-       "              importance_type='gain', interaction_constraints='',\n",
-       "              learning_rate=0.300000012, max_delta_step=0, max_depth=1,\n",
-       "              min_child_weight=8, missing=nan, monotone_constraints='()',\n",
-       "              n_estimators=110, n_jobs=0, num_parallel_tree=1, random_state=0,\n",
-       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
-       "              tree_method='exact', validate_parameters=1, verbosity=None)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# pred_proba = alg.predict_proba(X_test)\n",
-    "# roc_score = roc_auc_score(y_test, pred_proba[:, 1])\n",
-    "# print('roc на test', roc_score)\n",
-    "\n",
-    "best_clf = alg.best_estimator_\n",
-    "best_clf"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# METHOD 6\n",
+    "# MLP\n",
+    "from sklearn.neural_network import MLPClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier()"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "roc на test 0.8787228156274056\n"
+      "roc на test 0.9043404782525019\n"
      ]
     }
    ],
    "source": [
-    "pred_proba = best_clf.predict_proba(X_test)\n",
+    "mlp = MLPClassifier()\n",
+    "mlp.fit(X_train, y_train)\n",
+    "\n",
+    "pred_proba = mlp.predict_proba(X_test)\n",
     "roc_score = roc_auc_score(y_test, pred_proba[:, 1])\n",
     "print('roc на test', roc_score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier()"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roc на test 0.9072964780600463\n"
+     ]
+    }
+   ],
+   "source": [
+    "# отмасштаблируем признаки и попробуем снова\n",
+    "# пока плохо, нужно оптимизировать\n",
+    "mean_on_train = X_train.mean(axis=0)\n",
+    "std_on_train = X_train.std(axis=0)\n",
+    "\n",
+    "X_train_scaled = (X_train - mean_on_train) / std_on_train\n",
+    "X_test_scaled = (X_test - mean_on_train) / std_on_train\n",
+    "\n",
+    "mlp = MLPClassifier()\n",
+    "mlp.fit(X_train_scaled, y_train)\n",
+    "pred_proba = mlp.predict_proba(X_test_scaled)\n",
+    "roc_score = roc_auc_score(y_test, pred_proba[:, 1])\n",
+    "print('roc на test', roc_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -834,19 +1012,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'presort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-92-d775d4a8a48c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# значение к метрике на кроссвалидации коррелирует к метрике на степике\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mrfcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mbest_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcv_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrfcv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'roc_auc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\lab7701\\pycharmprojects\\coursework\\statistic\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     70\u001b[0m                           FutureWarning)\n\u001b[0;32m     71\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'presort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean score 0.8878407913727028\n"
      ]
     }
    ],
@@ -862,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,46 +1055,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Прогноз сохранен в файл  predict_2020-11-23_submit_2.csv\n",
+      "Прогноз сохранен в файл  predict_2020-11-27_submit_3.csv\n",
       "Распределение \"вероятностей\" модели\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(-0.000527, 0.0815]    4042\n",
-       "(0.0815, 0.163]        1033\n",
-       "(0.163, 0.244]          334\n",
-       "(0.244, 0.325]          197\n",
-       "(0.325, 0.406]          203\n",
-       "(0.406, 0.488]          203\n",
-       "(0.488, 0.569]           93\n",
-       "(0.569, 0.65]            34\n",
-       "(0.65, 0.731]            32\n",
-       "(0.731, 0.812]           13\n",
+       "(-0.000918, 0.1]    4169\n",
+       "(0.1, 0.2]          1007\n",
+       "(0.2, 0.3]           354\n",
+       "(0.3, 0.4]           257\n",
+       "(0.4, 0.5]           139\n",
+       "(0.5, 0.6]           115\n",
+       "(0.6, 0.7]            74\n",
+       "(0.7, 0.8]            44\n",
+       "(0.8, 0.9]            18\n",
+       "(0.9, 1.0]             7\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SUBMIT_NUM = 2\n",
+    "SUBMIT_NUM = 3\n",
     "\n",
     "events_pred  = pd.read_csv(f\"../events_data_test.csv\")\n",
     "submissions_pred = pd.read_csv(f\"../submission_data_test.csv\")\n",
     "X_pred , _ = get_labels_metrics(events_pred, submissions_pred)\n",
     "\n",
-    "pred_proba = bag_model2.predict_proba(X_pred)[:, 1]\n",
+    "pred_proba = best_clf.predict_proba(X_pred)[:, 1]\n",
     "rep_df = create_report(X_pred.index, pred_proba)\n",
     "assert rep_df.user_id.nunique() == X_pred.index.nunique()\n",
     "print ('Прогноз сохранен в файл ', save_report(rep_df, SUBMIT_NUM))\n",
@@ -929,6 +1102,13 @@
     "print ('Распределение \"вероятностей\" модели')\n",
     "pd.cut(pred_proba, 10).value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
