--- a/study/coursera_labeled_data_training/grad_boosting.ipynb
+++ b/study/coursera_labeled_data_training/grad_boosting.ipynb
@@ -336,6 +336,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-583500ea0658>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-583500ea0658>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print(f\"{input('Введите имя')} + {input(\"Введите еще одно имя\")} = Любовь\")\u001b[0m\n\u001b[1;37m                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{input('Введите имя')} + {input(\"Введите еще одно имя\")} = Любовь\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите имяАлеша\n",
+      "Введите еще одно имяСережа\n",
+      "Алеша + Сережа = Любовь\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a = input('Введите имя')\n",
+    "# b = input(\"Введите еще одно имя\")\n",
+    "print(f\"{input('Введите имя')} + {input(\"Введите еще одно имя')} = Любовь\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
