in research correlations

--- a/study/_temp/correlations.ipynb
+++ b/study/_temp/correlations.ipynb
@@ -1506,6 +1506,463 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для 61 большого города в Англии и Уэльсе известны средняя годовая смертность на 100000 населения (по данным 1958–1964) и концентрация кальция в питьевой воде (в частях на маллион). Чем выше концентрация кальция, тем жёстче вода. Города дополнительно поделены на северные и южные.  \n",
+    "Есть ли связь между жёсткостью воды и средней годовой смертностью? Посчитайте значение коэффициента корреляции Пирсона между этими признаками, округлите его до четырёх знаков после десятичной точки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_water = pd.read_csv('../../water.txt', sep ='\\t', header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mortality</th>\n",
+       "      <th>hardness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mortality</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.654849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hardness</th>\n",
+       "      <td>-0.654849</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           mortality  hardness\n",
+       "mortality   1.000000 -0.654849\n",
+       "hardness   -0.654849  1.000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_water.drop(['location', 'town'], axis=1).corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_mor = data_water['mortality']\n",
+    "data_hard = data_water['hardness']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6316646189166502"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_mor.corr(data_hard, method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Сохраняется ли связь между признаками, если разбить выборку на северные и южные города? Посчитайте значения корреляции Пирсона между средней годовой смертностью и жёсткостью воды в каждой из двух подвыборок, введите наименьшее по модулю из двух значений, округлив его до четырёх знаков после десятичной точки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_water_south = data_water[data_water['location'] == 'South']\n",
+    "data_water_north = data_water[data_water['location'] == 'North']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_mor_south = data_water_south['mortality']\n",
+    "data_hard_south = data_water_south['hardness']\n",
+    "data_mor_north = data_water_north['mortality']\n",
+    "data_hard_north = data_water_north['hardness']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6021532715484157"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_mor_south.corr(data_hard_south)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.36859783832887183"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_mor_north.corr(data_hard_north)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Среди респондентов General Social Survey 2014 года хотя бы раз в месяц проводят вечер в баре 203 женщины и 239 мужчин; реже, чем раз в месяц, это делают 718 женщин и 515 мужчин.  \n",
+    "\n",
+    "Посчитайте значение коэффициента корреляции Мэтьюса между полом и частотой похода в бары. Округлите значение до трёх знаков после десятичной точки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.10900237458678963"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b, c, d = 515, 239, 718, 203\n",
+    "mcc = ((a * d) - (b * c)) / (((a + b) * (a + c) * (b + d) * (c + d)) ** .5)\n",
+    "mcc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19.40753078854304,\n",
+       " 1.0558987006638725e-05,\n",
+       " 1,\n",
+       " array([[198.96597015, 243.03402985],\n",
+       "        [555.03402985, 677.96597015]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.chi2_contingency([[239, 203], [515, 718]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def proportions_confint_diff_ind(alpha=0.05):\n",
+    "    z = scipy.stats.norm.ppf(1 - alpha / 2.)\n",
+    "    n1 = 239 + 515\n",
+    "    n2 = 203 + 718\n",
+    "    p1 = 239 / n1\n",
+    "    p2 = 203 / n2\n",
+    "    \n",
+    "    left_boundary = (p1 - p2) - z * np.sqrt(p1 * (1 - p1) / n1 + p2 * (1 - p2) / n2)\n",
+    "    right_boundary = (p1 - p2) + z * np.sqrt(p1 * (1 - p1) / n1 + p2 * (1 - p2) / n2)\n",
+    "    \n",
+    "    return left_boundary, right_boundary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confidence interval: [0.053905, 0.139222]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"confidence interval: [%f, %f]\" % proportions_confint_diff_ind())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Проверьте гипотезу о равенстве долей любителей часто проводить вечера в баре среди мужчин и женщин. Посчитайте достигаемый уровень значимости, используя двустороннюю альтернативу. Введите номер первой значащей цифры (например, если вы получили 5.5×10−8, нужно ввести 8)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def proportions_diff_z_stat_ind():\n",
+    "    n1 = 239 + 515\n",
+    "    n2 = 203 + 718\n",
+    "    p1 = 239 / n1\n",
+    "    p2 = 203 / n2\n",
+    "    P = float(p1*n1 + p2*n2) / (n1 + n2)\n",
+    "    \n",
+    "    return (p1 - p2) / np.sqrt(P * (1 - P) * (1. / n1 + 1. / n2))\n",
+    "\n",
+    "def proportions_diff_z_test(z_stat, alternative = 'two-sided'):\n",
+    "    if alternative not in ('two-sided', 'less', 'greater'):\n",
+    "        raise ValueError(\"alternative not recognized\\n\"\n",
+    "                         \"should be 'two-sided', 'less' or 'greater'\")\n",
+    "    \n",
+    "    if alternative == 'two-sided':\n",
+    "        return 2 * (1 - stats.norm.cdf(np.abs(z_stat)))\n",
+    "    \n",
+    "    if alternative == 'less':\n",
+    "        return stats.norm.cdf(z_stat)\n",
+    "\n",
+    "    if alternative == 'greater':\n",
+    "        return 1 - stats.norm.cdf(z_stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 0.000008\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"p-value: %f\" % proportions_diff_z_test(proportions_diff_z_stat_ind(), 'two-sided'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Посмотрим на данные General Social Survey 2014 года и проанализируем, как связаны ответы на вопросы \"Счастливы ли вы?\" и \"Довольны ли вы вашим финансовым положением?\"  \n",
+    "Чему равно значение статистики хи-квадрат для этой таблицы сопряжённости? Округлите ответ до четырёх знаков после десятичной точки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_happy = np.array([[197, 111, 33], [382, 685, 331], [110, 342, 333]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(293.68311039689746,\n",
+       " 2.4964299580093467e-62,\n",
+       " 4,\n",
+       " array([[ 93.08597464, 153.74722662,  94.16679873],\n",
+       "        [381.6251981 , 630.318542  , 386.0562599 ],\n",
+       "        [214.28882726, 353.93423138, 216.77694136]]))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(data_happy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Чему в предыдущей задаче равно значение коэффициента V Крамера для рассматриваемых признаков?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cramers_stat(confusion_matrix):\n",
+    "    chi2 = stats.chi2_contingency(confusion_matrix)[0]\n",
+    "    print(confusion_matrix)\n",
+    "    n = confusion_matrix.sum()\n",
+    "    print(n)\n",
+    "    return np.sqrt(chi2 / (n*(min(confusion_matrix.shape)-1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[197 111  33]\n",
+      " [382 685 331]\n",
+      " [110 342 333]]\n",
+      "2524\n",
+      "V Cramer stat value: 0.2412\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('V Cramer stat value: %.4f' % cramers_stat(data_happy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.910000000000004e-18"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.binom_test(9, 10, 0.01, alternative = 'two-sided')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
