add churn_analysis, update ab and regression

--- a/study/_temp/regression_hypothesis.ipynb
+++ b/study/_temp/regression_hypothesis.ipynb
@@ -1682,6 +1682,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В разных признаках пропуски возникают по разным причинам и должны обрабатываться по-разному. \n",
+    "\n",
+    "Например, в признаке agefm пропуски стоят только там, где evermarr=0, то есть, они соответствуют женщинам, никогда не выходившим замуж. Таким образом, для этого признака NaN соответствует значению \"не применимо\". \n",
+    "\n",
+    "В подобных случаях, когда признак $x_1$ на части объектов в принципе не может принимать никакие значения, рекомендуется поступать так:\n",
+    "\n",
+    "* создать новый бинарный признак\n",
+    "$$ x_2 = {1,0,x1='не применимо',иначе; $$\n",
+    "* заменить \"не применимо\" в $x_1$ на произвольную константу $c$, которая среди других значений $x_1$ не встречается.\n",
+    "\n",
+    "Теперь, когда мы построим регрессию на оба признака и получим модель вида \n",
+    " \n",
+    "$$y=\\beta_0 + \\beta_1 x_1 + \\beta_2 x_2,$$\n",
+    "\n",
+    "на тех объектах, где $x_1$ было измерено, регрессионное уравнение примет вид \n",
+    "$$y=\\beta_0 + \\beta_1 x,$$\n",
+    "\n",
+    "а там, где $x_1$\n",
+    " \n",
+    "$$y=\\beta_0 + \\beta_1 c + \\beta_2.$$\n",
+    "\n",
+    "Выбор $c$ влияет только на значение и интерпретацию $\\beta_2$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -1883,19 +1911,7 @@
    "source": [
     "Избавимся от оставшихся пропусков.\n",
     "\n",
-    "Для признаков idlnchld, heduc и usemeth проведите операцию, аналогичную предыдущей: создайте индикаторы пропусков по этим признакам (idlnchld_noans, heduc_noans, usemeth_noans), замените пропуски на нехарактерные значения (c_{idlnchld}=-1c \n",
-    "idlnchld\n",
-    "​\t\n",
-    " =−1, c_{heduc_2}=-2c \n",
-    "heduc \n",
-    "2\n",
-    "​\t\n",
-    " \n",
-    "​\t\n",
-    " =−2 (значение -1 мы уже использовали), c_{usemeth}=-1c \n",
-    "usemeth\n",
-    "​\t\n",
-    " =−1).\n",
+    "Для признаков idlnchld, heduc и usemeth проведите операцию, аналогичную предыдущей: создайте индикаторы пропусков по этим признакам (idlnchld_noans, heduc_noans, usemeth_noans), замените пропуски на нехарактерные значения ($c_{idlnchld}=-1$, $c_{heduc_2}=-2$ (значение -1 мы уже использовали), $c_{usemeth}=-1$).\n",
     "\n",
     "Остались только пропуски в признаках knowmeth, electric, radio, tv и bicycle. Их очень мало, так что удалите объекты, на которых их значения пропущены."
    ]
@@ -2369,6 +2385,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3e-40"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.0000000000000000000000000000000000000003"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 123,
    "metadata": {},
    "outputs": [
@@ -2521,6 +2557,20 @@
    ],
    "source": [
     "fitted_2.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "У женщин, никогда не выходивших замуж, при прочих равных в среднем на 2.3 ребёнка меньше (p<0.001, 95% доверительный интервал для разницы между средними — [-2.6, -1.9])\n",
+    "\n",
+    "У женщин, не знающих, какое количество детей идеально, в среднем на \n",
+    "$\\beta_{idlnchld\\_noans} + c_{idlnchld} \\beta_{idlnchld} \\approx 0.58$ детей больше\n",
+    "\n",
+    "У женщин, не знающих, какое количество детей идеально, в среднем на 0.66 ребёнка больше (p=0.002, 95% доверительный интервал — [0.2, 1.1])\n",
+    "\n",
+    "С увеличением возраста женщины на 1 год среднее количество детей возрастает на 0.17 (p<0.001, 95% доверительный интервал — [0.16, 0.18])"
    ]
   },
   {
